# bdns-sync

./: .dockerignore  .gitignore  CHANGELOG.md  Dockerfile  Makefile  README.en.md  README.md  pyproject.toml  pytest.ini
.github/workflows/: ci.yml  publish.yml
bdns/sync/: __init__.py  __main__.py  bookkeeping.py  cli.py  dialects.py  generic.py  hashing.py  pipeline.py  scd2.py  schema.py  syncers.py
bdns/sync/sinks/: __init__.py
bdns/sync/sinks/sql/: __init__.py  bookkeeping.py  dialects.py  scd2.py  schema.py
docs/: api-behavior.en.md  api-behavior.md  bdns-api-behavior.en.md  bdns-api-behavior.md  data-caveats.en.md  data-caveats.md  deployment.en.md  deployment.md  roadmap.en.md  roadmap.md  sinks.en.md  sinks.md
scripts/: cron_dispatch.sh  delta_load.sh  full_load.sh
tests/: fake_client.py  test_cli.py  test_generic.py  test_hashing.py  test_scd2.py  test_syncers.py  test_syncers_wiring.py  test_timeline_convocatorias.py  test_timeline_full_catalogs.py  test_timeline_incremental_windows.py  test_timeline_multitable.py  test_timeline_swept_catalogs.py  timeline_helpers.py
tests/fixtures/: actividades.json  ayudasestado_busqueda.json  beneficiarios.json  concesiones_busqueda.json  convocatorias_busqueda.json  convocatorias_detail.json  convocatorias_ultimas.json  finalidades.json  grandesbeneficiarios_anios.json  grandesbeneficiarios_busqueda.json  instrumentos.json  minimis_busqueda.json  objetivos.json  organos.json  organos_agrupacion.json  partidospoliticos_busqueda.json  planesestrategicos_busqueda.json  planesestrategicos_detail.json  planesestrategicos_vigencia.json  regiones.json  reglamentos.json  sanciones_busqueda.json  sectores.json
